--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,7 +6,28 @@
         <title>Anais | Home</title>
     </head>
     <body>
-        <p>Just checking to see if this works</p>
+        <!--Header image-->
+        <img src="img/profile.jpg" width="400" alt="anais-profile-picture">
+        <!--Header title-->
+        <title>Anaïs Blenet</title>
+        <!--Header introduction-->
+        <sub>Welcome to my website! <br> I am a multifaceted recently graduated student with projects in both computer science and art. Feel free to browse through both, and if you'd like to know more or get in touch, drop me a message!</sub>
+
+        <!--Navbar-->
+        <h1 href="ds.html">Computer science</h1>
+        <h1 href="art.html">Art</h1>
+        <h1 href="#about">About</h1>
+        <h1 href="#contact">Contact</h1>
+
+        <!--About section-->
+        <h1 id="about">About</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis maxime exercitationem placeat voluptates? Soluta officia vero recusandae quia dolorum alias ipsa praesentium libero autem, itaque, perspiciatis quos nostrum dicta suscipit?</p>
+
+        <!--Contact section-->
+        <h1 id="contact">Contact</h1>
+        <button><a href="mailto:anais.blenet@work.com">Email</a></button>
+        <button><a ref="https://github.com/anaisbl">Github</a></button>
+        <button><a href="https://www.linkedin.com/in/anais-blenet/">Linkedin</a></button>
         
     </body>
 
