--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdn.tailwindcss.com"></script>
-        <link href="dist/styles.css" rel="stylesheet">
+        <link href="src/styles.css" rel="stylesheet">
         <title>Anais | Home</title>
     </head>
     <body class="bg-gray-100 text-gray-800 font-sans">
