--- a/code/public/index.html
+++ b/code/public/index.html
@@ -90,15 +90,15 @@
 
           <div class="space-x-8 flex justify-center">
 
-            <a href="mailto:anais.blenet@work.com" class="inline-block text-xl hover:scale-125 transition-all duration-300">
+            <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl hover:scale-125 transition-all duration-300">
               <img width="100" height="100" src="img/icons8-email-100.png" alt="new-post" alt="Email" />
             </a>
 
-            <a href="https://github.com/anaisbl" class="inline-block text-xl hover:scale-125 transition-all duration-300">
+            <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl hover:scale-125 transition-all duration-300">
               <img width="100" height="100" src="img/icons8-github-100.png" alt="Github" />
             </a>
 
-            <a href="https://www.linkedin.com/in/anais-blenet/" class="inline-block text-xl hover:scale-125 transition-all duration-300">
+            <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl hover:scale-125 transition-all duration-300">
               <img width="100" height="100" src="img/icons8-linkedin-100.png" alt="Linkedin" />
             </a>
 
@@ -108,6 +108,6 @@
 
       <!-- Link to the external JavaScript file -->
       <script src="main.js"></script>
-      
+
     </body>
 </html>
