--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,16 +9,6 @@
     </head>
     <body class="bg-base-200">
 
-      <style>
-        @import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
-        /*font for nav*/
-        .kalam-light {
-          font-family: "Kalam", serif;
-          font-weight: 300;
-          font-style: normal;
-        }
-      </style>
-
       <!--full body container for responsivness & centering-->
       <div class="flex flex-col items-center justify-center">
 
@@ -26,9 +16,9 @@
         <div class="w-full mb-8">
           <div class="navbar bg-primary w-full mx-auto py-2 flex justify-between items-center">
             <!-- Logo (on the left) -->
-            <a href="#" class="flex items-center space-x-4">
+            <a href="index.html" class="flex items-center space-x-4">
               <!--<img src="img/sign.png" alt="Logo" class="h-10 w-auto" />-->
-              <span class="text-2xl font-extralight text-gray-50 kalam-light">Anaïs Blenet</span>
+              <span class="text-2xl font-extralight text-gray-50">Anaïs Blenet</span>
             </a>
 
             <!-- Hamburger Icon for Mobile (visible on small screens) -->
@@ -40,24 +30,28 @@
   
             <!-- Navigation links (centered) -->
             <div id="navbar-links" class="hidden md:flex space-x-6">
-              <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300" href="cs.html">Computer Science</a>
-              <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300" href="art.html">Art</a>
-              <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300" href="#about">About</a>
-              <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300" href="#contact">Contact</a>
+              <a class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="cs.html">Computer Science</a>
+              <a class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="art.html">Art</a>
+              <a class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="#about">About</a>
+              <a class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="#contact">Contact</a>
             </div>
           </div>
 
           <!-- Mobile menu (hidden by default, shown when hamburger is clicked) -->
           <div id="mobile-menu" class="md:hidden hidden bg-primary w-full">
-            <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300 block py-2 px-4" href="cs.html">Computer Science</a>
-            <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300 block py-2 px-4" href="art.html">Art</a>
-            <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300 block py-2 px-4" href="#about">About</a>
-            <a class="btn btn-ghost text-xl text-gray-200 hover:text-neutral-content transition-all duration-300 block py-2 px-4" href="#contact">Contact</a>
+            <a id="cs-link" class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="cs.html">Computer Science</a>
+            <a id="art-link" class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="art.html">Art</a>
+            <a id="about-link" class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="#about">About</a>
+            <a id="contact-link" class="btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="#contact">Contact</a>
           </div>
         </div>
 
         <!--Header image-->
-        <img src="img/profile.jpg" class="rounded-full w-80 h-80 mb-4 mt-2 shadow-xl" alt="anais-profile-picture">
+        <div class="avatar">
+          <div class="ring-primary ring-offset-base-100 w-1/4 mx-auto rounded-full ring ring-offset-2">
+            <img src="img/profile.jpg" />
+          </div>
+        </div>
 
         <!--Header title-->
         <h1 class="text-4xl font-extrabold text-primary mb-6">Hi, my name is Anaïs</h1>
