Update img size

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -48,7 +48,7 @@
 
         <!--Header image-->
         <div class="avatar">
-          <div class="ring-primary ring-offset-base-100 w-1/4 mx-auto rounded-full ring ring-offset-2">
+          <div class="ring-primary ring-offset-base-100 w-64 mx-auto rounded-full ring ring-offset-2">
             <img src="img/profile.jpg" />
           </div>
         </div>
