--- a/code/public/index.html
+++ b/code/public/index.html
@@ -48,7 +48,7 @@
 
         <!--Header image-->
         <div class="avatar">
-          <div class="ring-primary ring-offset-base-100 w-64 mx-auto rounded-full ring ring-offset-2">
+          <div class="ring-primary ring-offset-base-100 w-1/2 sm:w-1/3 md:w-1/3 lg:w-1/4 h-auto mx-auto rounded-full ring ring-offset-2">
             <img src="img/profile.jpg" />
           </div>
         </div>
@@ -57,7 +57,7 @@
         <h1 class="text-4xl font-extrabold text-primary mb-6">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-center mb-6 px-4 w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse through both, and if you'd like to know more or get in touch, drop me a message!</h4>
+        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse through both, and if you'd like to know more or get in touch, drop me a message!</h4>
       
         <!--About section-->
         <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
