--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -7,8 +7,9 @@
         <!--Icons by Icons8-->
         <title>Anais | CS Projects</title>
     </head>
-    <body class="bg-base-200">
-        <!--full body container for responsivness & centering-->
+    <body class="bg-base-200 fade-transition">
+        
+      <!--full body container for responsivness & centering-->
       <div class="flex flex-col items-center justify-center">
 
         <!--Navbar-->
