--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,7 +14,7 @@
 
         <!--Navbar-->
         <div class="w-full mb-8">
-          <div class="navbar bg-primary w-full mx-auto py-2 flex justify-between items-center">
+          <div class="navbar bg-primary mx-auto py-2 flex justify-between items-center">
             <!-- Logo (on the left) -->
             <a href="index.html" class="flex items-center space-x-4">
               <!--<img src="img/sign.png" alt="Logo" class="h-10 w-auto" />-->
@@ -30,19 +30,17 @@
   
             <!-- Navigation links (centered) -->
             <div id="navbar-links" class="hidden md:flex space-x-6">
-              <a class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="cs.html">Computer Science</a>
-              <a class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="art.html">Art</a>
-              <a class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="#about">About</a>
-              <a class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300" href="#contact">Contact</a>
+              <a class="transition-link nav-link" href="cs.html">Computer Science</a>
+              <a class="transition-link nav-link" href="art.html">Art</a>
+              <a class="transition-link nav-link" href="#about">About</a>
             </div>
           </div>
 
           <!-- Mobile menu (hidden by default, shown when hamburger is clicked) -->
           <div id="mobile-menu" class="md:hidden hidden bg-primary w-full">
-            <a id="cs-link" class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="cs.html">Computer Science</a>
-            <a id="art-link" class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="art.html">Art</a>
-            <a id="about-link" class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="#about">About</a>
-            <a id="contact-link" class="transition-link btn btn-ghost text-xl text-red-300 hover:text-red-100 transition-all duration-300 block py-2 px-4" href="#contact">Contact</a>
+            <a id="cs-link" class="transition-link nav-link-mobile" href="cs.html">Computer Science</a>
+            <a id="art-link" class="transition-link nav-link-mobile" href="art.html">Art</a>
+            <a id="about-link" class="transition-link nav-link-mobile" href="#about">About</a>
           </div>
         </div>
 
