Content update on cs projects

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="dist/style.css" rel="stylesheet">
         <!--Icons by Icons8-->
-        <title>Anais | Home</title>
+        <title>Anaïs | Home</title>
     </head>
     <body class="bg-base-200 fade-transition">
 
@@ -89,6 +89,25 @@
         </div>
 
       </div>
+
+      <footer class="footer footer-center bg-primary text-primary-content p-4">
+        <aside>
+          <p>Copyright © 2025 - All right reserved to Nana</p>
+          <nav>
+            <div class="grid grid-flow-col gap-5 pb-2">
+              <a href="mailto:anais.blenet@work.com" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="img/icons8-email-100.png" alt="Email" />
+              </a>
+              <a href="https://github.com/anaisbl" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="img/icons8-github-100.png" alt="Github" />
+              </a>
+              <a href="https://www.linkedin.com/in/anais-blenet/" target="_blank" class="inline-block text-xl social-link">
+                <img width="50" height="50" src="img/icons8-linkedin-100.png" alt="Linkedin" />
+              </a>
+            </div>
+          </nav>
+        </aside>
+      </footer>
 
     <!-- Link to the external JavaScript file -->
     <script src="main.js"></script>
