--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -63,7 +63,7 @@
               <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> HTML/CSS, Bootstrap, JavaScript</p>
               <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Web development</p>
               <div class="space-x-4 mb-6">
-                <a href="https://www.cortosafaristanzania.com/" class="btn-red">
+                <a href="https://www.cortosafaristanzania.com/" target="_blank" class="btn-red">
                   Link to website
                 </a>
               </div>
@@ -83,7 +83,7 @@
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
                 <div class="space-x-4 mb-6">
-                  <a href="https://your-live-project-link.com" class="btn-red">
+                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                     Live Demo
                   </a>
                   <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
@@ -91,8 +91,47 @@
                   </a>
                 </div>
                 <div class="flex flex-wrap justify-center gap-4">
-                  <img src="path-to-screenshot1.jpg" alt="Screenshot of project" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="path-to-screenshot2.jpg" alt="Screenshot of project" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
+                </div>
+                <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
+                <p class="text-lg text-gray-700 mb-4">
+                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
+                </p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
+                <div class="space-x-4 mb-6">
+                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                    Live Demo
+                  </a>
+                  <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
+                    View Code
+                  </a>
+                </div>
+                <div class="flex flex-wrap justify-center gap-4">
+                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
+                </div>
+            </div>
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
+                <p class="text-lg text-gray-700 mb-4">
+                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
+                </p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
+                <div class="space-x-4 mb-6">
+                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                    Live Demo
+                  </a>
+                  <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
+                    View Code
+                  </a>
+                </div>
+                <div class="flex flex-wrap justify-center gap-4">
+                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
                 </div>
             </div>
         </section>
