--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -75,7 +75,8 @@
 
             <!--Uni projects-->
             <div class="divider divider-primary pt-10 pb-4">University projects</div>
-            <div class="container mx-auto px-4">
+            <!--1. Bank management system-->
+            <div class="container mx-auto px-4 py-4">
                 <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
                 <p class="text-lg text-gray-700 mb-4">
                   A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
@@ -83,59 +84,93 @@
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
                 <div class="space-x-4 mb-6">
-                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                     Live Demo
-                  </a>
-                  <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
+                  </a>-->
+                  <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
                     View Code
-                  </a>
-                </div>
-                <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
-                </div>
-                <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
-                <p class="text-lg text-gray-700 mb-4">
-                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
-                </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
-                <div class="space-x-4 mb-6">
-                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
-                    Live Demo
-                  </a>
-                  <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
-                    View Code
-                  </a>
+                  </a></button>
                 </div>
                 <div class="flex flex-wrap justify-center gap-4">
                   <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
                   <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
                 </div>
             </div>
-            <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
+            <!--2. Classifier marketing campaign-->
+            <div class="container mx-auto px-4 py-4">
+                <h2 class="text-3xl font-extrabold text-primary mb-4">Predicting the outcome of a marketing campaign</h2>
                 <p class="text-lg text-gray-700 mb-4">
-                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
+                  A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. A score of <strong>100%</strong> was awarded for this project.
                 </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Sci-kit Learn, Jupyter Notebooks</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
                 <div class="space-x-4 mb-6">
-                  <a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                     Live Demo
-                  </a>
-                  <a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
+                  </a>-->
+                  <button><a href="https://github.com/anaisbl/TUD---ML-CA1" class="btn-red">
                     View Code
-                  </a>
+                  </a></button>
                 </div>
                 <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg max-w-sm">
+                </div>
+            </div>
+            <!--3. Big data-->
+            <div class="container mx-auto px-4 py-4">
+                <h2 class="text-3xl font-extrabold text-primary mb-4">Predicting steel-plates defects</h2>
+                <p class="text-lg text-gray-700 mb-4">
+                    I joined a Kaggle playground series competition for the month of March 2024, with the task of predicting steel-plate defects. The playground series is organized by Kaggle, is open to everyone of any level with Kaggle merchandise to win. It mainly serves the purpose of training for other competitions and improving one's knowledge in the machine learning domain. <br> <br>
+
+                    The task of the competition is as follows: to predict the various defects on steel plates using the synthetic dataset provided and any model of your choice. Submissions are evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
+
+                    I achieved a score of 0.86375, which ranked me <strong>1443 out of 2199</strong>. The top score of the competition achieved 0.89782.
+                </p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Pyspark, Machine learning, Jupyter Notebook</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
+                <div class="space-x-4 mb-6">
+                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                    Live Demo
+                  </a>-->
+                  <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-red">
+                    View Code
+                  </a></button>
+                </div>
+                <div class="flex flex-wrap justify-center gap-4">
+                  <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-sm">
+                </div>
+            </div>
+            <!--3. Deep learning-->
+            <div class="container mx-auto px-4 py-4">
+                <h2 class="text-3xl font-extrabold text-primary mb-4">Prediction, Image processing & Transfer learning</h2>
+                <p class="text-lg text-gray-700 mb-4">
+                    This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
+
+                    Part 1 focused on predicting the genre of a song using one input feature, and then two through deep neural network models and methods. The dataset is the multilingual lyrics one from Kaggle comprising of two files: train and test. The train dataset will be used for training, validating and initial testing, and the test dataset for final testing. <br>
+
+                    Part 2 utilized the CIFAR-100 dataset, where we were tasked to randomly split the dataset into 2 subsets of 50 classes each and performa range of image processing and transfer learning operations. <br> <br>
+
+                    A score of <strong>71%</strong> was awarded for this project.
+
+                </p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Deep learning, Keras, Tensorflow, Machine learning, Jupyter Notebook</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
+                <div class="space-x-4 mb-6">
+                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                    Live Demo
+                  </a>-->
+                  <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-red">
+                    View Code
+                  </a></button>
+                </div>
+                <div class="flex flex-wrap justify-center gap-4">
+                  <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-sm">
                 </div>
             </div>
         </section>
-        
 
     </div>
 
