Preliminary cs page done

--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -79,7 +79,7 @@
             <div class="container mx-auto px-4 py-4">
                 <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
                 <p class="text-lg text-gray-700 mb-4">
-                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account.
+                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account. A score of <strong>63%</strong> was awarded for this project.
                 </p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
@@ -128,7 +128,7 @@
                     I achieved a score of 0.86375, which ranked me <strong>1443 out of 2199</strong>. The top score of the competition achieved 0.89782.
                 </p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Pyspark, Machine learning, Jupyter Notebook</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Big data</p>
                 <div class="space-x-4 mb-6">
                   <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                     Live Demo
@@ -156,18 +156,18 @@
 
                 </p>
                 <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Deep learning, Keras, Tensorflow, Machine learning, Jupyter Notebook</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
+                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Deep learning</p>
                 <div class="space-x-4 mb-6">
                   <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                     Live Demo
                   </a>-->
-                  <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-red">
+                  <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" class="btn-red">
                     View Code
                   </a></button>
                 </div>
                 <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg max-w-sm">
+                  <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg max-w-sm">
                 </div>
             </div>
         </section>
