--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -32,7 +32,7 @@
             <div id="navbar-links" class="hidden md:flex space-x-6">
               <a class="transition-link nav-link" href="cs.html">Computer Science</a>
               <a class="transition-link nav-link" href="art.html">Art</a>
-              <a class="transition-link nav-link" href="#about">About</a>
+              <a class="transition-link nav-link" href="index.html#about">About</a>
             </div>
           </div>
 
