--- a/code/public/art.html
+++ b/code/public/art.html
@@ -44,16 +44,16 @@
           </div>
         </div>
 
-        <!--Header image-->
-        <div class="avatar">
-            <img src="img/icons8-under-construction-100.png" class="w-full h-full object-cover"/>
-          </div>
-
         <!--Header title-->
         <h1 class="text-4xl font-extrabold text-primary mb-6">Art projects</h1>
 
+        <!--Header image-->
+        <div class="avatar">
+            <img src="img/icons8-under-construction-100.png" class="w-full h-full object-cover"/>
+        </div>
+
         <!--Header introduction-->
-        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Sorry! This page is still under construction!</h4>
+        <h4 class="text-lg text-center mb-6 px-4 pt-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Sorry! This page is still under construction!</h4>
 
         <div class="mb-6">
             <button class="btn-red"><a href="index.html">Return to Home</a></button>
