--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -48,9 +48,9 @@
         <h1 class="text-4xl font-extrabold text-primary mb-6">Computer science projects</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Computer science is an umbrella spanning many, many different disciplines. Something I try to explain to my parents that yes I studied computer science, no I am not capable of building an application like Facebook to become a millionnaire. <br> <br>
-        These projects have been done as part of university coursework, paid work and personal little projects to keep up my skills and learn more. <br> <br>
-        Some are ongoing (like this website), others have horrible syntax (we live and we learn) and a select few are actually, quite fantastic!</h4>
+        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Computer science is an umbrella spanning many, <em>many</em> different disciplines. Something I try to explain to my parents that, "Yes I studied computer science, no I am not capable of building an application like Facebook to become a millionnaire". <br> <br>
+        These projects have been completed as part of university coursework, paid work and personal little projects to keep up my skills and learn more. <br> <br>
+        Some are ongoing (like this website), others have <em>questionable</em> syntax (we live and we learn) and a select few are actually, quite fantastic!</h4>
 
         <section class="project my-16">
             <!--Personal projects-->
@@ -76,99 +76,96 @@
             <!--Uni projects-->
             <div class="divider divider-primary pt-10 pb-4">University projects</div>
             <!--1. Bank management system-->
-            <div class="container mx-auto px-4 py-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Bank Management System</h2>
-                <p class="text-lg text-gray-700 mb-4">
-                  A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account. A score of <strong>63%</strong> was awarded for this project.
-                </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
-                <div class="space-x-4 mb-6">
-                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
-                    Live Demo
-                  </a>-->
-                  <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
-                    View Code
-                  </a></button>
-                </div>
-                <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
-                </div>
+            <div class="container mx-auto px-4 pb-8">
+              <h2 class="text-3xl font-extrabold text-primary mb-4">1. Bank Management System</h2>
+              <p class="text-lg text-gray-700 mb-4">
+                A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account among ther features. <br><br> A grade of <strong>63%</strong> was awarded for this project.
+              </p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
+              <div class="space-x-4 mb-6">
+                <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  Live Demo
+                </a>-->
+                <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" class="btn-red">
+                  View Code
+                </a></button>
+              </div>
+              <div class="flex flex-wrap justify-center gap-4">
+                <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg max-w-sm">
+              </div>
             </div>
+            <hr>
             <!--2. Classifier marketing campaign-->
             <div class="container mx-auto px-4 py-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Predicting the outcome of a marketing campaign</h2>
-                <p class="text-lg text-gray-700 mb-4">
-                  A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. A score of <strong>100%</strong> was awarded for this project.
-                </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Sci-kit Learn, Jupyter Notebooks</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
-                <div class="space-x-4 mb-6">
-                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
-                    Live Demo
-                  </a>-->
-                  <button><a href="https://github.com/anaisbl/TUD---ML-CA1" class="btn-red">
-                    View Code
-                  </a></button>
-                </div>
-                <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg max-w-sm">
-                </div>
+              <h2 class="text-3xl font-extrabold text-primary mb-4">2. Predicting the outcome of a marketing campaign</h2>
+              <p class="text-lg text-gray-700 mb-4">
+                A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. I tested various classifiers from the sci-kit learn library and utlized certain encoding techniques to achieve the task. <br> <br> A grade of <strong>100%</strong> was awarded for this project.
+              </p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Sci-kit Learn, Jupyter Notebooks</p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
+              <div class="space-x-4 mb-6">
+                <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  Live Demo
+                </a>-->
+                <button><a href="https://github.com/anaisbl/TUD---ML-CA1" class="btn-red">
+                  View Code
+                </a></button>
+              </div>
+              <div class="flex flex-wrap justify-center gap-4">
+                <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg max-w-sm">
+                <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg max-w-sm">
+              </div>
             </div>
+            <hr>
             <!--3. Big data-->
             <div class="container mx-auto px-4 py-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Predicting steel-plates defects</h2>
-                <p class="text-lg text-gray-700 mb-4">
-                    I joined a Kaggle playground series competition for the month of March 2024, with the task of predicting steel-plate defects. The playground series is organized by Kaggle, is open to everyone of any level with Kaggle merchandise to win. It mainly serves the purpose of training for other competitions and improving one's knowledge in the machine learning domain. <br> <br>
-
-                    The task of the competition is as follows: to predict the various defects on steel plates using the synthetic dataset provided and any model of your choice. Submissions are evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
-
-                    I achieved a score of 0.86375, which ranked me <strong>1443 out of 2199</strong>. The top score of the competition achieved 0.89782.
-                </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Pyspark, Machine learning, Jupyter Notebook</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Big data</p>
-                <div class="space-x-4 mb-6">
-                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
-                    Live Demo
-                  </a>-->
-                  <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-red">
-                    View Code
-                  </a></button>
-                </div>
-                <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-sm">
-                </div>
+              <h2 class="text-3xl font-extrabold text-primary mb-4">3. Predicting steel-plates defects</h2>
+              <p class="text-lg text-gray-700 mb-4">
+                  I joined a Kaggle playground series competition for the month of March 2024, with the task of predicting steel-plate defects using a synthetic dataset provided and with any model of our choice. Submissions were evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
+                  I achieved a area under ROC score of 0.86375, which ranked me in the <strong>65th percentile</strong> (1443 out of 2199). The top score of the competition achieved a 0.89782 score.
+              </p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Pyspark, Machine learning, Jupyter Notebook</p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Big data</p>
+              <div class="space-x-4 mb-6">
+                <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  Live Demo
+                </a>-->
+                <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" class="btn-red">
+                  View Code
+                </a></button>
+              </div>
+              <div class="flex flex-wrap justify-center gap-4">
+                <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg max-w-sm">
+                <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg max-w-sm">
+              </div>
             </div>
-            <!--3. Deep learning-->
+            <hr>
+            <!--4. Deep learning-->
             <div class="container mx-auto px-4 py-4">
-                <h2 class="text-3xl font-extrabold text-primary mb-4">Prediction, Image processing & Transfer learning</h2>
-                <p class="text-lg text-gray-700 mb-4">
-                    This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
+              <h2 class="text-3xl font-extrabold text-primary mb-4">Prediction, Image processing & Transfer learning</h2>
+              <p class="text-lg text-gray-700 mb-4">
+                  This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
+                  Part 1 focused on predicting the genre of a song using through deep neural network models and methods using a dataset from Kaggle. <br>
+                  Part 2 utilized the CIFAR-100 dataset to perform a range of image processing and transfer learning operations. <br> <br>
+                  A grade of <strong>71%</strong> was awarded for this project.
 
-                    Part 1 focused on predicting the genre of a song using one input feature, and then two through deep neural network models and methods. The dataset is the multilingual lyrics one from Kaggle comprising of two files: train and test. The train dataset will be used for training, validating and initial testing, and the test dataset for final testing. <br>
-
-                    Part 2 utilized the CIFAR-100 dataset, where we were tasked to randomly split the dataset into 2 subsets of 50 classes each and performa range of image processing and transfer learning operations. <br> <br>
-
-                    A score of <strong>71%</strong> was awarded for this project.
-
-                </p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Deep learning, Keras, Tensorflow, Machine learning, Jupyter Notebook</p>
-                <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Deep learning</p>
-                <div class="space-x-4 mb-6">
-                  <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
-                    Live Demo
-                  </a>-->
-                  <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" class="btn-red">
-                    View Code
-                  </a></button>
-                </div>
-                <div class="flex flex-wrap justify-center gap-4">
-                  <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg max-w-sm">
-                  <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg max-w-sm">
-                </div>
+              </p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Deep learning, Keras, Tensorflow, Machine learning, Jupyter Notebook</p>
+              <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Deep learning</p>
+              <div class="space-x-4 mb-6">
+                <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
+                  Live Demo
+                </a>-->
+                <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" class="btn-red">
+                  View Code
+                </a></button>
+              </div>
+              <div class="flex flex-wrap justify-center gap-4">
+                <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg max-w-sm">
+                <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg max-w-sm">
+              </div>
             </div>
         </section>
 
