--- a/code/public/index.html
+++ b/code/public/index.html
@@ -46,8 +46,8 @@
 
         <!--Header image-->
         <div class="avatar">
-          <div class="ring-primary ring-offset-base-100 w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 h-auto mx-auto rounded-full ring ring-offset-2">
-            <img src="img/profile.jpg" class="w-full h-full object-cover rounded-full"/>
+          <div class="avatar-styling">
+            <img src="img/profile.jpg" class="w-full h-full rounded-full"/>
           </div>
         </div>
 
