--- a/code/public/index.html
+++ b/code/public/index.html
@@ -55,7 +55,7 @@
         <h1 class="text-4xl font-extrabold text-primary mb-6">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
-        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse through both, and if you'd like to know more or get in touch, drop me a message!</h4>
+        <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
 
         <!--Contact buttons-->
         <div class="space-x-8 flex justify-center">
@@ -74,14 +74,14 @@
         <div id="about" class="text-center max-w-2xl mx-auto mb-8 bg-base-200 p-8 rounded-lg shadow-lg">
           <h2 id="about" class="text-3xl font-extrabold text-primary mb-6">About</h2>
           <h4 class="text-2xl font-semibold text-accent-content mb-4">Why art and computer science?</h4>
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art has a special place in my heart. I started drawing before I even learned to write! Drawing my day dreams, my nighmares, my goals, my many trains of thoughts, anything and everything I saw, heard about and imagined. <br> I didn't want to mix business and pleasure so much, which is why I didn't pursue a higher education in the subject. However, in my free time I hone my skills and take on certain projects with a lot of creative freedom and super cools ideas!</p>
+          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art has always held a special place in my heart—I've been drawing since before I could even write! I've used it to capture my dreams, fears, ideas, and everything I see or image. While I chose not to pursue formal education in art and keep it as a personal passion, in my free time I continue to hone my skills and take on creative projects with plenty of freedom and exciting ideas.</p>
           <div class="mb-6">
             <button class="btn-red"><a href="art.html">View art projects</a></button>
           </div>
           
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art and computer science might have seemed miles apart decades ago, and some might consider them so still to this day, including me. I like how different they both are in terms of content and approaches. Art stimulates my creative brain, and computer science stimulates the "scienc-y" side of it. I love how both allow me to fall into the zone, wether I'm trying to figure out how to deploy through Github actions or choosing a color palette for a new project. My interest in computers was minimal from a young age, I was agile with technology, I liked learning the little tricks, tips and shortcuts but I always thought the world of computer science was out of reach for me. </p>
+          <p class="text-lg mb-6 leading-relaxed text-accent-content">Art and computer science may seem worlds apart, and in some ways, they are. I enjoy how different they are in both content and approach—art fuels my creativity, while computer science challenges the analytical side of my brain. Both let me get "in the zone," whether I'm training a classification model or picking a color palette for a new project. Growing up, I had minimal interest in computers; while I enjoyed learning tips, tricks, and shortcuts, I always thought computer science was out of my reach.</p>
 
-          <p class="text-lg mb-6 leading-relaxed text-accent-content">The pandemic changed that for me, I was introduced to web development thanks to an elective class I took in my last year of bachelors, and I thought "Wow, this is what coding is!". 5 years later, here I am, graduated masters in computer science, knowing what OOP means and being able to deploy my own website and data science projects! Time is a beautiful thing, I am proud of where I stand today and I can't wait to look back in 2030</p>
+          <p class="text-lg mb-6 leading-relaxed text-accent-content">That changed during the pandemic when I took an elective coding class in the final year of my bachelor's degree. It opened my eyes to the world of computing, and I thought, "So, this is what it's all about!" Five years later, I've earned a master's in computer science, understand OOP, and can deploy my own websites and data science projects. Time has been a great teacher, and I'm proud of how far I've come. I can't wait to look back in 2030 and see how much further I've gone!</p>
 
           <div class="mb-6">
             <button class="btn-red"><a href="cs.html">View CS projects</a></button>
