--- a/code/public/index.html
+++ b/code/public/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <!--Header title-->
-        <h1 class="text-4xl font-extrabold text-primary mb-6">Hi, my name is Anaïs</h1>
+        <h1 class="text-4xl font-extrabold text-primary my-6 text-center">Hi, my name is Anaïs</h1>
 
         <!--Header introduction-->
         <h4 class="text-lg text-center mb-6 px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Welcome to my website! I am a recently graduated student with projects in both computer science and art. Feel free to browse or get in touch!</h4>
