Fixing mobile view

--- a/code/public/art.html
+++ b/code/public/art.html
@@ -40,7 +40,7 @@
           <div id="mobile-menu" class="md:hidden hidden bg-primary w-full">
             <a id="cs-link" class="transition-link nav-link-mobile" href="cs.html">Computer Science</a>
             <a id="art-link" class="transition-link nav-link-mobile" href="art.html">Art</a>
-            <a id="about-link" class="transition-link nav-link-mobile" href="#about">About</a>
+            <a id="about-link" class="transition-link nav-link-mobile" href="index.html#about">About</a>
           </div>
         </div>
 
