--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -40,7 +40,7 @@
           <div id="mobile-menu" class="md:hidden hidden bg-primary w-full">
             <a id="cs-link" class="transition-link nav-link-mobile" href="cs.html">Computer Science</a>
             <a id="art-link" class="transition-link nav-link-mobile" href="art.html">Art</a>
-            <a id="about-link" class="transition-link nav-link-mobile" href="#about">About</a>
+            <a id="about-link" class="transition-link nav-link-mobile" href="index.html#about">About</a>
           </div>
         </div>
 
@@ -60,7 +60,10 @@
             <p class="text-lg text-gray-700 mb-4">
               A website for a tourism company based in Tanzania. A component-based CSS framework was used (Bootstrap) alongside JavaScript and HTML for content & styling, and Jquery for form submission
             </p>
-            <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> HTML/CSS, Bootstrap, JavaScript</p>
+            <p class="text-md font-semibold text-gray-600"><strong>Tech Stack:</strong></p>
+            <div class="badge badge-outline">HTML/CSS</div>
+            <div class="badge">Bootstrap</div>
+            <div class="badge badge-warning mb-6">JavaScript</div>
             <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Web development</p>
             <div class="space-x-4 mb-6">
               <a href="https://www.cortosafaristanzania.com/" target="_blank" class="btn-red">
@@ -81,7 +84,8 @@
             <p class="text-lg text-gray-700 mb-4">
               A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account among ther features. <br><br> A grade of <strong>63%</strong> was awarded for this project.
             </p>
-            <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python</p>
+            <p class="text-md font-semibold text-gray-600"><strong>Tech Stack:</strong></p>
+            <div class="badge badge-secondary mb-6">Python</div>
             <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Software development</p>
             <div class="space-x-4 mb-6">
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
@@ -103,7 +107,10 @@
             <p class="text-lg text-gray-700 mb-4">
               A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. I tested various classifiers from the sci-kit learn library and utlized certain encoding techniques to achieve the task. <br> <br> A grade of <strong>100%</strong> was awarded for this project.
             </p>
-            <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Sci-kit Learn, Jupyter Notebooks</p>
+            <p class="text-md font-semibold text-gray-600"><strong>Tech Stack:</strong></p>
+            <div class="badge badge-secondary">Python</div>
+            <div class="badge badge-success">Sci-kit learn</div>
+            <div class="badge badge-neutral mb-6">Jupyter Notebook</div>
             <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Machine learning</p>
             <div class="space-x-4 mb-6">
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
@@ -126,9 +133,13 @@
                 I joined a Kaggle playground series competition with the task of predicting steel-plate defects. Submissions were evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
                 I achieved a area under ROC score of 0.86375, which ranked me in the <strong>65th percentile</strong> (1443 out of 2199). The top score of the competition achieved a 0.89782 score.
             </p>
-            <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Pyspark, Machine learning, Jupyter Notebook</p>
+            <p class="text-md font-semibold text-gray-600"><strong>Tech Stack:</strong></p>
+            <div class="badge badge-secondary">Python</div>
+            <div class="badge badge-success">Sci-kit Learn</div>
+            <div class="badge badge-neutral">Jupyter Notebook</div>
+            <div class="badge badge-accent mb-4">Pyspark</div>
             <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Big data</p>
-            <div class="space-x-4 mb-6">
+            <div class="space-x-4 my-6">
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
                 Live Demo
               </a>-->
@@ -152,7 +163,11 @@
                 A grade of <strong>71%</strong> was awarded for this project.
 
             </p>
-            <p class="text-md font-semibold text-gray-600 mb-4"><strong>Tech Stack:</strong> Python, Deep learning, Keras, Tensorflow, Machine learning, Jupyter Notebook</p>
+            <p class="text-md font-semibold text-gray-600"><strong>Tech Stack:</strong></p>
+            <div class="badge badge-secondary">Python</div>
+            <div class="badge badge-neutral">Jupyter Notebook</div>
+            <div class="badge badge-error mb-6">Tensorflow/Keras</div>
+
             <p class="text-md font-semibold text-gray-600 mb-4"><strong>Project tag:</strong> Deep learning</p>
             <div class="space-x-4 mb-6">
               <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-red">
